<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="application_copyright">Copyright © 2014 The CyanogenMod Project</string>
    <string name="application_version">v5.0</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="arcsin">asin</string>
    <string name="arccos">acos</string>
    <string name="arctan">atan</string>
    <string name="dot">.</string>
    <string name="const_imaginary">i</string>
    <string name="fun_percentage">%</string>
    <string name="integral">∫</string>
    <string name="dx">dX</string>
    <string name="dy">dY</string>
    <string name="solveForX">Solve for X</string>
    <string name="solveForY">Solve for Y</string>
    <string name="mod">mod</string>
    <string name="cbrt">³√</string>
    <string name="parentheses">( )</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="copy">"Copy '%s'"</string>
    <string name="det">det</string>
    <string name="eigenvalue">Eigen</string>
    <string name="solve">Solve</string>
    <string name="dotProduct">Dot</string>
    <string name="crossProduct">Cross</string>
    <string name="determinantDesc">det</string>
    <string name="eigenvalueDesc">Eigenvalues</string>
    <string name="plus_row">+Row</string>
    <string name="minus_row">-Row</string>
    <string name="plus_col">+Col</string>
    <string name="minus_col">-Col</string>
    <string name="matrix_new">[]</string>
    <string name="matrix_inverse">-1</string>
    <string name="matrix_transpose">T</string>
    <string name="next">Next</string>
    <string name="hex">Hex</string>
    <string name="bin">Bin</string>
    <string name="dec">Dec</string>
    <string name="desc_hex">Hexadecimal</string>
    <string name="desc_bin">Binary</string>
    <string name="desc_dec">Decimal</string>
    <string name="history_line_equals">=</string>
    <string name="desc_fun_percentage">Percent</string>
    <string name="const_e">e</string>
    <string name="const_pi">π</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>
    <string name="op_add">+</string>
    <string name="op_div">÷</string>
    <string name="op_fact">!</string>
    <string name="op_mul">×</string>
    <string name="op_pow">^</string>
    <string name="op_sqrt">√</string>
    <string name="op_sub">−</string>
    <string name="eq">=</string>
    <string name="inf">∞</string>
    <string name="app_name">Calculator</string>
    <string name="error_nan">Not a number</string>
    <string name="error">Error</string>
    <string name="dec_point">.</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="clr">clr</string>
    <string name="del">del</string>
    <string name="desc_const_e">"Euler's number"</string>
    <string name="desc_const_pi">pi</string>
    <string name="desc_dec_point">point</string>
    <string name="desc_lparen">left parenthesis</string>
    <string name="desc_rparen">right parenthesis</string>
    <string name="desc_fun_cos">cosine</string>
    <string name="desc_fun_ln">natural logarithm</string>
    <string name="desc_fun_log">logarithm</string>
    <string name="desc_fun_sin">sine</string>
    <string name="desc_fun_tan">tangent</string>
    <string name="desc_op_add">plus</string>
    <string name="desc_op_div">divide</string>
    <string name="desc_op_fact">factorial</string>
    <string name="desc_op_mul">times</string>
    <string name="desc_op_pow">power</string>
    <string name="desc_op_sqrt">square root</string>
    <string name="desc_op_sub">minus</string>
    <string name="desc_clr">clear</string>
    <string name="desc_del">delete</string>
    <string name="desc_eq">equals</string>
</resources>
