<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/pad_numeric_background_color" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:layout_gravity="center" android:id="@id/digit7" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit7" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit4" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit4" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit1" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit1" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/dot" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/dot" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/pad_numeric_background_color" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:layout_gravity="center" android:id="@id/digit8" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit8" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit5" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit5" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit2" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit2" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit0" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit0" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/pad_numeric_background_color" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:layout_gravity="center" android:id="@id/digit9" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit9" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit6" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit6" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/digit3" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/digit3" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/eq" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/eq" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/pad_operator_background_color" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <Button android:layout_gravity="center" android:id="@id/div" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/op_div" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/mul" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/op_mul" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/sub" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/op_sub" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button android:layout_gravity="center" android:id="@id/plus" android:layout_width="@dimen/floating_window_button_height" android:layout_height="@dimen/floating_window_button_height" android:text="@string/op_add" style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
</LinearLayout>